--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         <li><strong>span (container):</strong><code> &lt;span&gt;&lt;/span&gt;</code></li>
     </ul>
     
+    <h2>Links To Helpful Resources For HTML Basics</h2>
+    
+    <h2><a href = "https://www.w3schools.com/html/html_basic.asp">w3schools.com</a></h2>
+    <h2><a href = "http://www.simplehtmlguide.com/cheatsheet.php">Cheat Sheet</a></h2>
+    <h2><a href = "https://www.khanacademy.org/computing/computer-programming/html-css/intro-to-html/p/html-basics">khanacademy video</a></h2>
     </div>
 </body>
 
